--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
     <link rel="stylesheet" href="css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/swiper.css" type="text/css">
@@ -759,37 +758,41 @@
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="nombre">Nombre (*)</label>
-                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
                                     </div>
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="correo">Email (*)</label>
-                                        <input type="email" class="form-control" id="correo" name="correo" placeholder="Email" required>
+                                        <input type="email" class="form-control" id="correo" name="correo" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="telefono">Numero (*)</label>
-                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero" required>
+                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero">
                                     </div>
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="asunto">Asunto (*)</label>
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <a href="" id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
-                                </a>
+                                </button>
                             </div>
                         </div>
                         <div class="d-none d-md-block d-lg-none bottommargin-sm"></div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
-                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje" required></textarea>
+                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
                         </div>
                     </div>
+                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Enviar</span>
+                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
@@ -853,7 +856,7 @@
     <div id="gotoTop" class="icon-angle-up"></div>
 
     <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script>
+    <script src="js/plugins.js"></script> 
     <script src="js/functions.js"></script>
     <script src="js/sweetalert2.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
