--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -201,13 +201,13 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="rs-plugin/images/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <!-- <img src="rs-plugin/images/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina> -->
                         <div class="rs-background-video-layer"
                             data-forcerewind="on"
                             data-volume="mute"
                             data-videowidth="100%"
                             data-videoheight="100%"
-                            data-videomp4="rs-plugin/images/hello-world.mp4"
+                            data-videomp4="images/slider/grafico.mp4"
                             data-videopreload="auto"
                             data-videoloop="loop"
                             data-forceCover="1"
@@ -336,7 +336,7 @@
                             data-whitespace="nowrap"
                             data-type="svg" 
                             data-actions='[{"event":"click","action":"scrollbelow","offset":"-50","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
-                            data-svg_src="rs-plugin/images/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_src="images/slider/ic_keyboard_arrow_down_24px.svg" 
                             data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-basealign="slide" 
@@ -471,61 +471,37 @@
                 <div class="heading-block center">
                     <h2 class="texto-verde">Todos nuestros sitios webs <strong>incluyen</strong> para ti.</h2>
                 </div>
-                <div class="row my-5">
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-pen-nib"></i>
-                            </div>
-                            <h3 class="texto-azul">Diseño a la Medida</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                <div class="tabs clearfix" id="tab-1">
+                    <ul class="process-steps bottommargin clearfix boot-tabs" id="myTab2">
+                        <li class="active paso1">
+                            <a href="#paso1" class="i-circled i-alt divcenter">1</a>
+                            <h5>Paso 1</h5>
+                        </li>
+                        <li class="paso2">
+                            <a href="#paso2" class="i-circled i-alt divcenter">2</a>
+                            <h5>Paso 2</h5>
+                        </li>
+                        <li class="paso3">
+                            <a href="#paso3" class="i-circled i-alt divcenter">3</a>
+                            <h5>Paso 3</h5>
+                        </li>
+                        <li class="paso4">
+                            <a href="#paso4" class="i-circled i-alt divcenter">4</a>
+                            <h5>Paso 4</h5>
+                        </li>
+                    </ul>
+                    <div class="tab-container">
+                        <div class="tab-content clearfix" id="paso1">
+                            <p>Paso-1 Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-tablet1"></i>
-                            </div>
-                            <h3 class="texto-azul">Diseño Responsive</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        <div class="tab-content clearfix" id="paso2">
+                            <p>Paso-2 Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-users"></i>
-                            </div>
-                            <h3 class="texto-azul">Integración con las RRSS</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        <div class="tab-content clearfix" id="paso3">
+                            <p>Paso-3 Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-world"></i>
-                            </div>
-                            <h3 class="texto-azul">Posicionamiento Web Básico</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-map-marker1"></i>
-                            </div>
-                            <h3 class="texto-azul">Google Maps</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <i class="icon-images"></i>
-                            </div>
-                            <h3 class="texto-azul">Banco de Imágenes</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        <div class="tab-content clearfix" id="paso4">
+                            <p>Paso-4 Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                         </div>
                     </div>
                 </div>
