--- a/nosotros.html
+++ b/nosotros.html
@@ -238,49 +238,24 @@
                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
                         <div class="tp-caption tp-resizeme" 
-                           id="slide-1-layer-15" 
-                           data-x="['left','left','left','left']" 
-                           data-hoffset="['18','18','18','18']" 
-                           data-y="['top','top','top','top']" 
-                           data-voffset="['270','270','270','270']" 
-                           data-width="none"
-                           data-height="none"
-                           data-whitespace="nowrap"
-                           data-type="image" 
-                           data-responsive_offset="on" 
-                           data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                           data-textAlign="['inherit','inherit','inherit','inherit']"
-                           data-paddingtop="[0,0,0,0]"
-                           data-paddingright="[0,0,0,0]"
-                           data-paddingbottom="[0,0,0,0]"
-                           data-paddingleft="[0,0,0,0]"
-                           style="z-index: 8;">
-                           <img src="images/logos/logomini.png" alt="" data-ww="['130px','130px','130px','130px']" data-hh="['130px','130px','130px','130px']" data-no-retina>
-                        </div>
-                        <div class="tp-caption"
-                           id="slide-240-layer-1"
-                           data-x="['left','left','left','left']" 
-                           data-hoffset="['139','120','100','80']"
-                           data-y="['middle','middle','middle','middle']" 
-                           data-voffset="['-100','-100','-120','-150']"
-                           data-fontsize="['90','80','70','60']"
-                           data-lineheight="['90','80','70','60']"
-                           data-fontweight="['600','600','600','600']"
-                           data-letterspacing="['-5','-5','-5','-3']"
-                           data-width="['none','none','320','260']"
-                           data-height="110"
-                           data-whitespace="['nowrap','nowrap','nowrap','nowrap']"
-                           data-type="text"
-                           data-responsive_offset="off"
-                           data-responsive="off"
-                           data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"nothing"}]'
-                           data-textAlign="['left','left','left','left']"
-                           data-paddingtop="[0,0,0,0]"
-                           data-paddingright="[10,10,0,0]"
-                           data-paddingbottom="[0,0,0,0]"
-                           data-paddingleft="[0,0,0,0]"
-                           style="z-index: 7; min-width: 260px; max-width: 260px; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
-                           ¿Quienes Somos? 
+                            id="slide-1-layer-15" 
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-y="['top','top','top','top']" 
+                            data-voffset="['220','220','220','220']" 
+                            data-width="none"
+                            data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="image" 
+                            data-responsive_offset="on" 
+                            data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            data-paddingtop="[0,0,0,0]"
+                            data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]"
+                            data-paddingleft="[0,0,0,0]"
+                            style="z-index: 8;">
+                            <img src="images/slider/quienes-somos.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                            id="slide-240-layer-2"
